Added classes: Material, Mesh, Asset, Icomponent, Renderer, Transform, GameObject, Aded Managers: AssetManager, RenderManager, TextureManager Android.mk added -frtti flag moved image.png to textures/ graphicsTexture.cpp updated to work with manager GLESDemo.cpp updated to work with managers and redistributed code Resource.cpp updated to work with manager

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
 
 <resources>
     <!-- Simple strings. -->
+    <string name="app_name">GL2JNI</string>
     <string name="gl2jni_activity">GL2JNI</string>
 
 </resources>
